Initial setup of the new deployment toolkit

--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,13 +1,9 @@
 # for default config options see https://raw.githubusercontent.com/ansible/ansible/devel/examples/ansible.cfg
 [defaults]
+host_key_checking = False
 hash_behaviour = merge
 callback_plugins = ansible/plugins/callback
 roles_path = ansible/roles
 library = ansible/library
-force_handlers = true
-inventory = ansible/inventories/hosts.yml
-stdout_callback = actionable
-host_key_checking = false
-
-[connection]
-pipelining = false
+force_handlers = True
+inventory = ansible/inventories/hosts.yaml
