--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,4 +48,6 @@ promote_to_staging:
   environment:
     name: staging
     url: https://pp.oxidps.de/
-  when: manual
+#  when: manual
+  only:
+    - develop
