--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ codecheck:
     - merge_requests
     - develop
   needs:
-    - build
+    - job: build_release
   image: composer:2.0.8
   variables:
     TZ: Europe/Berlin
@@ -71,7 +71,7 @@ promote_to_staging:
   only:
     - develop
   needs:
-    - build
+    - job: build_release
   environment:
     name: staging
     url: https://pp.oxidps.de/
