fix: change build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 
 build_release:
   stage: build
+  needs: []
   image: composer:2.0.8
   before_script:
     - php oxideshop/composer-2.0.14.phar config -g cache-dir "$(pwd)/.composer-cache"
@@ -50,7 +51,7 @@ codecheck:
     - merge_requests
     - develop
   needs:
-    - build
+    - build_release
   image: composer:2.0.8
   variables:
     TZ: Europe/Berlin
@@ -71,7 +72,7 @@ promote_to_staging:
   only:
     - develop
   needs:
-    - build
+    - build_release
   environment:
     name: staging
     url: https://pp.oxidps.de/
