--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,8 +49,7 @@ codecheck:
   only:
     - merge_requests
     - develop
-  needs:
-    - build_release
+  needs: [build_release]
   image: composer:2.0.8
   variables:
     TZ: Europe/Berlin
@@ -70,8 +69,7 @@ promote_to_staging:
   stage: promote
   only:
     - develop
-  needs:
-    - build_release
+  needs: [build_release]
   environment:
     name: staging
     url: https://pp.oxidps.de/
