feat: 2nd try "needs"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 
 build_release:
   stage: build_release
+  needs: []
   image: composer:2.0.8
   before_script:
     - php oxideshop/composer-2.0.14.phar config -g cache-dir "$(pwd)/.composer-cache"
@@ -18,6 +19,9 @@ build_release:
     - php composer-2.0.14.phar install --no-scripts --no-plugins
     - php composer-2.0.14.phar install
     - php composer-2.0.14.phar ci:archive
+  only:
+    - merge_requests
+    - develop
   cache:
     key:
       files:
@@ -34,7 +38,8 @@ build_release:
   image:
     name: mprokopov/oxid-ansible-runner
     entrypoint: [""]
-  needs: [build_release]
+  needs:
+    - job: build_release
   variables:
     ARTIFACT: $CI_BUILD_REF.tar.gz
   script:
@@ -49,7 +54,8 @@ codecheck:
   only:
     - merge_requests
     - develop
-  needs: [build_release]
+  needs:
+    - job: build_release
   image: composer:2.0.8
   variables:
     TZ: Europe/Berlin
@@ -69,7 +75,8 @@ promote_to_staging:
   stage: promote
   only:
     - develop
-  needs: [build_release]
+  needs:
+    - job: build_release
   environment:
     name: staging
     url: https://pp.oxidps.de/
