--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build_release:
   script:
     - cd oxideshop
     - rm -rf vendor
-    - php composer-2.0.14.phar install --no-scripts --no-plugins
+    - php composer-2.0.14.phar install --no-dev --no-scripts --no-plugins
     - php composer-2.0.14.phar install
     - php composer-2.0.14.phar ci:archive
   only:
