--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ codecheck:
     - cd oxideshop
     - rm -rf vendor
     - php composer-2.0.14.phar validate
+    - php composer-2.0.14.phar install --no-dev --no-plugins --no-scripts --no-ansi --no-interaction --no-progress
     - php composer-2.0.14.phar install --no-dev --no-ansi --no-interaction --no-progress
     - vendor/bin/phpcs --standard=phpcs.xml --report-junit=../generated/phpcs-junit.xml
   artifacts:
