feat: test with different composer commands ...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,8 +61,8 @@ codecheck:
     - cd oxideshop
     - rm -rf vendor
     - php composer-2.0.14.phar validate
-    - php composer-2.0.14.phar install --no-dev --no-plugins --no-scripts --no-ansi --no-interaction --no-progress
-    - php composer-2.0.14.phar install --no-dev --no-ansi --no-interaction --no-progress
+    - php composer-2.0.14.phar install --no-plugins --no-scripts --no-ansi --no-interaction --no-progress
+    - php composer-2.0.14.phar composer run-script post-install-cmd
     - vendor/bin/phpcs --standard=phpcs.xml --report-junit=../generated/phpcs-junit.xml
   artifacts:
     reports:
