--- a/oxideshop/custom/paypal-client/composer.json
+++ b/oxideshop/custom/paypal-client/composer.json
@@ -5,7 +5,7 @@
     "version": "0.0.1",
     "require": {
         "php" : ">=7.1",
-        "guzzlehttp/guzzle": "~6 || ~7",
+        "guzzlehttp/guzzle": "~7",
         "psr/log": "^1.1",
         "league/oauth2-client": "^2.4",
         "webmozart/assert": "^1.7 || ^1.8 || ^1.9"
